--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.10.2",
     "hiredis": "^0.1.17",
+    "mysql": "^2.5.3",
     "redis": "^0.12.1",
     "socket.io": "^1.2.0"
   }
