--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.10.2",
     "hiredis": "^0.1.17",
+    "mongodb": "^1.4.19",
+    "mongoose": "^3.8.19",
     "mysql": "^2.5.3",
     "redis": "^0.12.1",
+    "sequelize": "^2.0.0-rc2",
     "socket.io": "^1.2.0"
   }
 }
